Bootstrap Carousel Implementation

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,19 @@ h1 {
     font-weight: 900;
 }
 
-h3{
+h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
+h3 {
     font-family: "Montserrat", sans-serif;
     font-weight: 900;
 }
 
-p{
+p {
     color: #8f8f8f;
 }
 
@@ -69,16 +76,46 @@ p{
     padding: 7% 15%;
 }
 
-.feature-box{
+.feature-box {
     text-align: center;
     padding: 5%;
 }
 
-.icon{
+.icon {
     color: #ef8172;
     margin-bottom: 1rem;
 }
 
 .icon:hover {
     color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
 }
