--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 h1 {
@@ -66,14 +66,18 @@ p {
 /* Title Image */
 
 .title-image {
-    width: 60%;
+    width: 22%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 23.5%;
 }
 
 /* Features Section */
 
 #features {
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
 }
 
 .feature-box {
@@ -116,6 +120,17 @@ p {
     margin: 20px 20px 50px;
 }
 
-.carousel-item{
+.carousel-item {
     padding: 7% 15%;
+}
+
+/* Pricing Section */
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
 }
