Refactoring and some final touches

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,36 +2,50 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-#title {
-    background-color: #ff4c68;
-    color: #fff;
-}
-
 .container-fluid {
     padding: 3% 15% 7%;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Montserrat", sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: 900;
-}
-
-h2 {
-    font-family: "Montserrat", sans-serif;
-    font-size: 3rem;
-    line-height: 1.5;
-    font-weight: 900;
 }
 
 h3 {
-    font-family: "Montserrat", sans-serif;
     font-weight: 900;
 }
 
 p {
     color: #8f8f8f;
+}
+
+/* Headings */
+
+.big-heading {
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
+.medium-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
+/* Sections */
+
+.colored-section {
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+.white-section {
+    background-color: white;
 }
 
 /* Navigation Bar */
@@ -76,7 +90,6 @@ p {
 
 #features {
     padding: 7% 15%;
-    background-color: white;
     position: relative;
 }
 
@@ -99,7 +112,6 @@ p {
 #testimonials {
     text-align: center;
     background-color: #ef8172;
-    color: #fff;
 }
 
 .testimonial-image {
@@ -139,16 +151,7 @@ p {
 
 #cta {
     padding: 7% 15%;
-    background-color: #ff4c68;
-    color: #fff;
     text-align: center;
-}
-
-.cta-heading {
-    font-family: "Montserrat", sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: 900;
 }
 
 #footer {
@@ -187,3 +190,5 @@ p {
     }
 
 }
+
+/* CSS selectors selector1, selector2 { Multiple } selector1 selector2 { Hierarchy } selector1selector2 { Attribute }  */
